...
        </array>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ConverterView" customModule="CurrencyConverter" customModuleProvider="target">
            <connections>
                <outlet property="addButton" destination="1k8-5E-1Wv" id="VWZ-9U-9wV"/>
                <outlet property="baseCurrencyButton" destination="256-Ro-6ZW" id="8Vb-yT-COK"/>
                <outlet property="buyButton" destination="A39-Ul-ino" id="fHi-H9-46h"/>
                <outlet property="contentView" destination="BBq-NP-G5L" id="dcD-Wb-I6C"/>
                <outlet property="inputAmountTextField" destination="kvg-aA-lU0" id="lpv-Oj-nA3"/>
                <outlet property="sellButton" destination="CPV-80-a2e" id="hVF-nH-8C0"/>
                <outlet property="shareRatesButton" destination="rAp-D3-aqN" id="6a6-o1-755"/>
                <outlet property="tableView" destination="94T-BW-afh" id="a9B-12-MvJ"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="BBq-NP-G5L" userLabel="ContentView">
...
                    <connections>
                        <action selector="baseCurrencyPressed:" destination="-1" eventType="touchUpInside" id="uaW-Ay-WLy"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rAp-D3-aqN" userLabel="Send Button">
                    <rect key="frame" x="288" y="348" width="40" height="40"/>
                    <accessibility key="accessibilityConfiguration" identifier="sendMessageButton"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="40" id="kLS-mr-U5r"/>
                        <constraint firstAttribute="width" secondItem="rAp-D3-aqN" secondAttribute="height" multiplier="1:1" id="oPI-4R-xEa"/>
                    </constraints>
                    <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                        <action selector="shareRatesButtonPressed:" destination="-1" eventType="touchUpInside" id="PtU-Tx-yO8"/>
                    </connections>
                </button>
                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="input amount" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kvg-aA-lU0" userLabel="Text Field" customClass="AdjustableTextField" customModule="Cur
                    <rect key="frame" x="121" y="100" width="206" height="44"/>
                    <color key="backgroundColor" name="veryLightGrayDynamic"/>
                    <accessibility key="accessibilityConfiguration" identifier="amountTextField"/>
                    <constraints>
                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="206" id="btm-wg-PF1"/>
                        <constraint firstAttribute="height" constant="44" id="tsZ-NS-v3P"/>
                    </constraints>
                    <color key="textColor" name="darkBlueDynamic"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        <constraint firstAttribute="width" constant="2" id="fm0-H3-jof"/>
                    </constraints>
                </view>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1k8-5E-1Wv" userLabel="Add Currency Button">
                    <rect key="frame" x="111.66666666666669" y="315" width="120" height="30"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="converterAddButton"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="Wp1-YL-P9x"/>
                        <constraint firstAttribute="width" constant="120" id="iU7-6V-e03"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
