//
//  AccessibilityID.swift
//  CurrencyConverter
//
//  Created by Artem Shcherban on 02.11.2022.
//

import Foundation

enum AccessibilityID {
    static let datePickerID = "datePicker"
    static let exRatesTableViewID = "exRatesTableView"
    static let currencyListTableViewID = "currencyListTableView"
}
