...
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExchangeRatesView" customModule="CurrencyConverter" customModuleProvider="target">
            <connections>
                <outlet property="addButton" destination="WEd-gm-e9Q" id="kqb-Mi-kZz"/>
                <outlet property="contentView" destination="iN0-l3-epB" id="ktI-JP-wMd"/>
                <outlet property="dateTextField" destination="dvj-2i-ukK" id="dQt-rr-ZGE"/>
                <outlet property="helpButton" destination="ruy-UN-Nbl" id="wOV-hG-cmm"/>
                <outlet property="tableView" destination="xw2-Vv-iKT" id="Oh1-3d-4rs"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="343" height="398"/>
...
                    <constraints>
                        <constraint firstAttribute="width" constant="2" id="hXQ-3i-HzN"/>
                    </constraints>
                </view>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEd-gm-e9Q" userLabel="Add Currency Button">
                    <rect key="frame" x="111.5" y="314.5" width="120" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="exRatesAddButton"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="120" id="8A2-Dc-Amn"/>
                        <constraint firstAttribute="height" constant="30" id="Ets-0K-pOU"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
